(feat) add isString isNumber isArray

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <script>mocha.setup('bdd')</script>
   <script src="spec/lib/expect/index.js"></script>
 
-  <!-- <script src="src/lowdash.js"></script> -->
-  <script src="spec/lib/lodash/lodash.js"></script>
+  <script src="src/lowdash.js"></script>
+  <!-- <script src="spec/lib/lodash/lodash.js"></script> -->
   <script src="spec/lowdashSpec.js"></script>
   <script>
     mocha.checkLeaks();
