(fix) fix clone test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <div id="mocha"></div>
   <script src="spec/lib/jquery/dist/jquery.js"></script>
-  <script src="spec/lib/sinon/index.js"></script>
+  <!-- <script src="spec/lib/sinon/index.js"></script> -->
+  <script src="spec/lib/sinonjs/sinon.js"></script>
+
   <script src="spec/lib/mocha/mocha.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="spec/lib/expect/index.js"></script>
