(feat) add save scroll feature

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <title>Lowdash Test Suite</title>
   <link rel="stylesheet" href="test/lib/mocha/mocha.css" />
 </head>
-<body>
+<script src="test/lib/scroll.js"></script>
+<body onload="loadScroll()" onunload="saveScroll()">
   <div id="mocha"></div>
-  <script src="test/lib/jquery/dist/jquery.js"></script>
+  <!-- <script src="test/lib/jquery/dist/jquery.js"></script> -->
   <script src="test/lib/sinonjs/sinon.js"></script>
   <script src="test/lib/mocha/mocha.js"></script>
   <script>mocha.setup('bdd')</script>
@@ -15,7 +16,7 @@
   <script src="test/js-fundamentals-tests.js"></script>
   <script>
     mocha.checkLeaks();
-    mocha.globals(['jQuery']);
+    mocha.globals();
     mocha.run();
   </script>
 </body>
