(feat) update title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Lowdash Test Suite</title>
+  <title>JS-Fundamental Test Suite</title>
   <link rel="stylesheet" href="test/lib/mocha/mocha.css" />
 </head>
 <script src="test/lib/scroll.js"></script>
