--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <script src="test/js-fundamentals-tests.js"></script>
   <script>
     mocha.globals();
-    mocha.run();
+    if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
+    else { mocha.run(); }
   </script>
 </body>
 </html>
