(Feat) move scroll file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>JS-Fundamental Test Suite</title>
   <link rel="stylesheet" href="test/lib/mocha/mocha.css" />
 </head>
-<script src="test/lib/scroll.js"></script>
+<script src="test/scroll.js"></script>
 <body onload="loadScroll()" onunload="saveScroll()">
   <div id="mocha"></div>
   <!-- <script src="test/lib/jquery/dist/jquery.js"></script> -->
