(Feat) edit test

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script>mocha.setup('bdd')</script>
   <script src="test/lib/expect/index.js"></script>
   <script src="src/js-fundamentals.js"></script>
+  <script src="test/lib/lodash/lodash.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
