--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>JS-Fundamental Test Suite</title>
   <link rel="stylesheet" href="test/lib/mocha/mocha.css" />
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
 <script src="test/scroll.js"></script>
 <body onload="loadScroll()" onunload="saveScroll()">
   <div id="mocha"></div>
