--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
-    <title>React App</title>
+    <title>Squeezed</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
