troubleshooting frontend/backend connection

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <noscript>In Index Html</noscript>
 <div id="root"></div>
 </body>
-<script src="./static/js/main.js"></script>
+<script 
+  src="./static/js/main.js"
+  crossorigin="anonymous"
+></script>
 </html>
