--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="./static/favicon.ico"/>
+    <link rel="icon" href="./static/favicon3.ico"/>
     <link rel='stylesheet' href="./static/css/index.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
