--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <noscript>In Index Html</noscript>
 <div id="root"></div>
 </body>
+<h1>Hello</h1>
 <script 
   src="./static/js/main.js"
   crossorigin="anonymous"
