--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <title>Squeezed</title>
 </head>
-<body>
+<body id="body">
 <noscript>In Index Html</noscript>
-<div id="root"></div>
+<div id="root" ></div>
 </body>
 <script 
   src="./static/js/main.js"
